Replaced navbar with table to fix alignment issues (fight me);

--- a/static/css/mycss.css
+++ b/static/css/mycss.css
@@ -85,17 +85,20 @@ a {
     padding: 12px 20px 12px 20px;
 }
 
+.navbar-table {
+    width: 100%;
+}
+
 #navbar-home-link {
-    display: inline-block;
-    width: 15%;
     font-size: 32px;
 }
 
-.navbar-menu-list {
-    display: inline-flex;
-    justify-content: flex-end;
-    width: 75%;
-    margin: 0 0 0 auto;
+.navbar-menu-left {
+    text-align: left;
+}
+
+.navbar-menu-right {
+    text-align: right;
 }
 
 .navbar-menu-list-item {
